<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00000000"
    tools:context="com.example.dustin.Scroll.MainActivity"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32pt"
        android:text="@string/FirstWords"
        android:id="@+id/word_landing"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <com.example.dustin.Scroll.ScrollTextView
        android:layout_width="fill_parent"
        android:background="#00000000"
        android:layout_height="wrap_content"
        android:id="@+id/scrolltext"
        android:textSize="32pt"
        android:text="@string/FirstWords"
        android:layout_centerVertical="true"
        android:textColor="#000000">
    </com.example.dustin.Scroll.ScrollTextView>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Playbut"
        android:onClick="NextRSVP"
        android:id="@+id/start_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/right_arrow"
        android:background="#0000"
        android:paddingTop="400dp"
        android:paddingLeft="200dp"
        android:alpha="0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Prevbut"
        android:id="@+id/back_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="PrevRSVP"
        android:src="@drawable/left_arrow"
        android:background="#0000"
        android:paddingRight="200dp"
        android:paddingTop="400dp"
        android:alpha="0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inctex"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/start_button"
        android:layout_alignEnd="@+id/start_button"
        android:src="@drawable/plus"
        android:onClick="incTextsize"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dectex"
        android:src="@drawable/minus"
        android:onClick="decTextsize"
        android:background="#0000"
        android:layout_below="@+id/inctex"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="57dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:src="@drawable/play2"
        android:onClick="StartScroll"
        android:background="#0000"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="250dp"
        android:paddingRight="250dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:alpha="0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:src="@drawable/pause2"
        android:onClick="pauseScroll"
        android:background="#0000"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingRight="250dp"
        android:paddingLeft="250dp"
        android:alpha="0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/faster"
        android:src="@drawable/speedometer_3"
        android:onClick="fastRSVP"
        android:background="#0000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slower"
        android:src="@drawable/speedometer_3"
        android:onClick="slowRSVP"
        android:background="#0000"
        android:layout_alignBottom="@+id/dectex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
